--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,11 +5,89 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+
+  /* portal to tomorrow */
+  --deg: 1;
+  --x: -50%;
+  --y: -50%;
+  --speed: 150ms;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+  }
+}
+
+.portal-modal {
+  margin: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: serif;
+  background: radial-gradient(circle at 50% 35%, #334455, #000);
+}
+
+.portal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(var(--x, -50%), var(--y, -50%)) rotate(0deg);
+  font-size: 20vmin;
+  width: 3.5em;
+  height: 3.5em;
+  border-radius: 90% 95% 85% 105%;
+  background: #0f0;
+  mix-blend-mode: screen;
+  filter: hue-rotate(0deg);
+  animation: wobble calc(var(--speed) * var(--t)) linear infinite;
+  transform-origin: -var(--y) -var(--x);
+  box-shadow: 0 0 0.5em 0.2em #000 inset, 0 0 0.15em 0 #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.portal::after {
+  font-size: 1em;
+  white-space: nowrap;
+}
+
+.portal:nth-child(1) {
+  --x: -53%;
+  --y: -53%;
+  --t: 37;
+}
+
+.portal:nth-child(2) {
+  --x: -47%;
+  --y: -52%;
+  --t: 58;
+}
+
+.portal:nth-child(3) {
+  --x: -45%;
+  --y: -50%;
+  --t: 46;
+}
+
+.portal:nth-child(4) {
+  --x: -53%;
+  --y: -45%;
+  --t: 72;
+}
+
+.portal:nth-child(5) {
+  --x: -55%;
+  --y: -45%;
+  --t: 62;
+}
+
+@keyframes wobble {
+  to {
+    filter: hue-rotate(360deg);
+    transform: translate(var(--x), var(--y)) rotate(360deg);
   }
 }
